java 17 syntax migration (#50)
Signed-off-by: Sergio Cano <canosergio90@gmail.com>